@@ -12,15 +12,19 @@
 function wfGetForwardedFor() {
 	if( function_exists( 'apache_request_headers' ) ) {
 		// More reliable than $_SERVER due to case and -/_ folding
-		$set = apache_request_headers();
-		$index = 'X-Forwarded-For';
-		$index2 = 'Client-ip';
+	        $set = array ();
+		foreach ( apache_request_headers() as $tempName => $tempValue ) {
+		    $set[ strtoupper( $tempName ) ] = $tempValue;
+		}
+		$index = strtoupper ( 'X-Forwarded-For' );
+		$index2 = strtoupper ( 'Client-ip' );
 	} else {
 		// Subject to spoofing with headers like X_Forwarded_For
 		$set = $_SERVER;
 		$index = 'HTTP_X_FORWARDED_FOR';
 		$index2 = 'CLIENT-IP';
 	}
+	
 	#Try a couple of headers
 	if( isset( $set[$index] ) ) {
 		return $set[$index];
@@ -39,8 +43,11 @@ function wfGetForwardedFor() {
 function wfGetAgent() {
 	if( function_exists( 'apache_request_headers' ) ) {
 		// More reliable than $_SERVER due to case and -/_ folding
-		$set = apache_request_headers();
-		$index = 'User-Agent';
+	        $set = array ();
+		foreach ( apache_request_headers() as $tempName => $tempValue ) {
+		    $set[ strtoupper( $tempName ) ] = $tempValue;
+		}
+		$index = strtoupper ( 'User-Agent' );
 	} else {
 		// Subject to spoofing with headers like X_Forwarded_For
 		$set = $_SERVER;
