@@ -75,6 +75,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 13273) "Categories:" message at the bottom of the page shouldn't have
   hardcoded colon, use new 'colon-separator' message instead
 * Parse MediaWiki message translations with a correct language setting on preview
+* (bug 13281) Treat X-Forwarde-For, Client-ip and User-Agent headers as
+  case-insensitive names.
 
 === API changes in 1.13 ===
 
